WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
218400
BaseAudioContext.decodeAudioData() should throw an InvalidStateError when document is not fully active
https://bugs.webkit.org/show_bug.cgi?id=218400
Summary
BaseAudioContext.decodeAudioData() should throw an InvalidStateError when doc...
Chris Dumez
Reported
2020-10-30 12:31:59 PDT
BaseAudioContext.decodeAudioData() should throw an InvalidStateError when document is not fully active: -
https://webaudio.github.io/web-audio-api/#dom-baseaudiocontext-decodeaudiodata
We currently throw a NotAllowedError instead.
Attachments
Patch
(5.88 KB, patch)
2020-10-30 12:33 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-10-30 12:33:37 PDT
Created
attachment 412787
[details]
Patch
EWS
Comment 2
2020-10-30 13:10:01 PDT
Committed
r269203
: <
https://trac.webkit.org/changeset/269203
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 412787
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-10-30 13:10:21 PDT
<
rdar://problem/70893372
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug