BaseAudioContext.decodeAudioData() should throw an InvalidStateError when document is not fully active https://bugs.webkit.org/show_bug.cgi?id=218400

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Rebaseline WPT tests that are now passing.

* web-platform-tests/webaudio/the-audio-api/the-audiocontext-interface/audiocontext-detached-execution-context-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-offlineaudiocontext-interface/offlineaudiocontext-detached-execution-context-expected.txt:

Source/WebCore:

BaseAudioContext.decodeAudioData() should throw an InvalidStateError when document is not fully active:
- https://webaudio.github.io/web-audio-api/#dom-baseaudiocontext-decodeaudiodata

We were previously throwing a NotAllowedError instead.

No new tests, rebaselined existing tests.

* Modules/webaudio/BaseAudioContext.cpp:
(WebCore::BaseAudioContext::decodeAudioData):


Canonical link: https://commits.webkit.org/231065@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269203 268f45cc-cd09-0410-ab3c-d52691b4dbfc